# bcompiler

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  b.h  ba.c  bc.c  bif.c  bif.h  bparse.c  lex.c  lex.h
cmake/: CMakeASCompiler.cmake.in  CMakeASInformation.cmake  CMakeDetermineASCompiler.cmake  CMakeTestASCompiler.cmake
compiler/: CMakeLists.txt  b.c  b.h  b.l  ba.c  bc.c  bif.c  bif.h  blink  jfl.l  lex.c
programs/: copy.b  def.b  e.b  exec.b  execv.b  func.b  hello.b  pargs.b  printf.b  printn.b  recurse.b  test.b  v.b
runtime/: CMakeLists.txt  Makefile  b0.s  blib.s  bn.s  bstr.s  bsys.s  compile.txt  rt.b
tests/: Makefile  cond1.b  cond2.b  cond3.b  cond4.b  cond4.out  cond5.b  core  expr1.b  expr1.out  expr2.b  expr2.out  expr3.b  expr4.b  expr5.b  func1.b  func2.b  func3.b  func4.b  func5.b  func6.b  func7.b  output1.b  output2.b  output3.b  output4.b  output5.b  str1.b  str2.b  str3.b  str3.out  vec1.b  vec2.b  vec2.out  vec3.b  vec4.b  vec5.b  vec6.b
